<resources>
    <string name="app_name">Made in China</string>
    <string name="searchHint">Enter Keywords</string>
    <string name="searchLabel">search</string>
    <string name="title_activity_main">Made in China</string>
    <string name="a_type_click">点击事件</string>
    <string name="a_type_page">页面事件</string>
    <string name="a001">$001退出应用(全局菜单B)</string>
    <string name="a003">$003首页广告(首页)</string>
    <string name="a004">$004查看收到询盘(首页)</string>
    <string name="a005">$005查看报价(首页)</string>
    <string name="a006">$006查看推荐产品(首页)</string>
    <string name="a007">$007查看目录(首页)</string>
    <string name="a008">$008查看收藏(首页)</string>
    <string name="a009">$009查看历史浏览(首页)</string>
    <string name="a010">$010返回首页(全局菜单A)</string>
    <string name="a011">$011进入搜索(首页)</string>
    <string name="a012">$012快速发布RFQ(首页)</string>
    <string name="a013">$012*01快速发布RFQ(全局菜单A)</string>
    <string name="a014">$013进入Virtual Office(首页)</string>
    <string name="a015">$013*01进入Virtual Office(全局菜单A)</string>
    <string name="a016">$014设置(首页)</string>
    <string name="a017">$051登录账号(全局菜单B)</string>
    <string name="a018">$052退出账号(全局菜单B)</string>
    <string name="a019">$056联系我们(全局菜单B)</string>
    <string name="a020">$10001首页</string>
    <string name="a021">$016切换产品标签(历史浏览)</string>
    <string name="a022">$017切换到目录标签(历史浏览)</string>
    <string name="a023">$018查看历史浏览产品</string>
    <string name="a024">$019查看历史浏览目录</string>
    <string name="a025">$10002历史浏览列表页</string>
    <string name="a026">$021切换产品标签(收藏)</string>
    <string name="a027">$022切换到公司标签(收藏)</string>
    <string name="a028">$023切换到目录标签(收藏)</string>
    <string name="a029">$024查看收藏产品</string>
    <string name="a030">$025查看收藏公司</string>
    <string name="a031">$026查看收藏目录</string>
    <string name="a032">$10003收藏列表页</string>
    <string name="a033">$029按目录搜索(搜索)</string>
    <string name="a034">$030选择搜索条件选项(搜索)</string>
    <string name="a035">$031搜索(搜索)</string>
    <string name="a036">$036切换最近搜索标签(搜索)</string>
    <string name="a037">$037切换常用关键词标签(搜索)</string>
    <string name="a038">$038使用最近使用关键词搜索(搜索)</string>
    <string name="a039">$039添加关键词至常用关键词(历史搜索)</string>
    <string name="a040">$040从常用关键词移除关键词(历史搜索)</string>
    <string name="a041">$041使用常用关键词搜索(搜索)</string>
    <string name="a042">$042从常用关键词移除关键词(常用关键词)</string>
    <string name="a043">$043使用联想关键词搜索(搜索)</string>
    <string name="a044">$044搜索页</string>
    <string name="a045">$045目录搜索页</string>
    <string name="a046">$046查看收到询盘(VO)</string>
    <string name="a047">$047查看已发询盘(VO)</string>
    <string name="a048">$048查看收到报价(VO)</string>
    <string name="a049">$049查看修改RFQ(VO)</string>
    <string name="a050">$050查看待处理RFQ(VO)</string>
    <string name="a051">$051查看正在处理RFQ(VO)</string>
    <string name="a052">$052查看过期RFQ(VO)</string>
    <string name="a053">$053VO首页</string>
    <string name="a054">$054打开/关闭安全图片(More)</string>
    <string name="a055">$055查看关于我们(More)</string>
    <string name="a056">$056查看使用条款(More)</string>
    <string name="a057">$057Setting页面</string>
    <string name="a058">$058登录(登录页)</string>
    <string name="a059">$059跳转注册页面(登录页)</string>
    <string name="a060">$060登录页</string>
    <string name="a061">$061注册(注册页)</string>
    <string name="a062">$062取消注册(注册页)</string>
    <string name="a063">$063注册页面</string>
    <string name="a064">$064发布RFQ(RFQ发布)</string>
    <string name="a065">$065取消发布RFQ(RFQ发布)</string>
    <string name="a066">$066搜索目录(RFQ发布)</string>
    <string name="a067">$067选择目录(RFQ发布)</string>
    <string name="a068">$068RFQ发布页面</string>
    <string name="a069">$069返回VO页/首页(RFQ-Quotation Received)</string>
    <string name="a070">$070查看RFQ报价列表(RFQ-Quotation Received)</string>
    <string name="a071">$071返回RFQ列表(RFQ-Quotation Received)</string>
    <string name="a072">$072删除RFQ(RFQ-Quotation Received)</string>
    <string name="a073">$073查看RFQ详情(RFQ-Quotation Received)</string>
    <string name="a074">$074查看报价详情(RFQ-Quotation Received)</string>
    <string name="a075">$075针对报价发送询盘(RFQ-Quotation Received)</string>
    <string name="a076">$076查看上一封报价详情(RFQ-Quotation Received)</string>
    <string name="a077">$077查看下一封报价详情(RFQ-Quotation Received)</string>
    <string name="a078">$078返回报价列表(RFQ-Quotation Received)</string>
    <string name="a079">$079VO内已收报价RFQ列表页</string>
    <string name="a080">$080VO内已收报价列表页</string>
    <string name="a081">$081VO内报价详情页</string>
    <string name="a082">$082查看RFQ返回原因(RFQ-Re-edit)</string>
    <string name="a083">$083修改RFQ(RFQ-Re-edit)</string>
    <string name="a084">$084VO内返回编辑RFQ列表页</string>
    <string name="a085">$085VO内返回编辑RFQ详情页</string>
    <string name="a086">$086VO内RFQ重新编辑页</string>
    <string name="a087">$087查看RFQ详情(RFQ- Pending)</string>
    <string name="a088">$088删除RFQ(RFQ- Pending)</string>
    <string name="a089">$089VO内待审核RFQ列表页</string>
    <string name="a090">$090VO内待审核RFQ详情页</string>
    <string name="a091">$091查看RFQ详情(RFQ-Processing)</string>
    <string name="a092">$092VO内正在审核RFQ列表页</string>
    <string name="a093">$093VO内正在审核RFQ详情页</string>
    <string name="a094">$094查看RFQ详情(RFQ-Expired)</string>
    <string name="a095">$095删除RFQ(RFQ-Expired)</string>
    <string name="a096">$096VO内已过期RFQ列表页</string>
    <string name="a097">$097VO内已过期RFQ详情页</string>
    <string name="a098">$098查看产品列表(Showroom)</string>
    <string name="a099">$099查看公司详情(Showroom)</string>
    <string name="a100">$100查看认证详情(Showroom)</string>
    <string name="a101">$101收藏公司(Showroom)</string>
    <string name="a102">$102取消收藏公司(Showroom)</string>
    <string name="a103">$103发送询盘(Showroom首页)</string>
    <string name="a104">$104Showroom首页</string>
    <string name="a105">$105查看产品详情(Showroom-产品列表)</string>
    <string name="a106">$106搜索产品(Showroom-产品列表)</string>
    <string name="a107">$107查看产品分组(Showroom-产品列表)</string>
    <string name="a108">$108Showroom内产品列表页</string>
    <string name="a109">$109查看公司信息(Showroom-公司详情)</string>
    <string name="a110">$110查看会员信息(Showroom-公司详情)</string>
    <string name="a111">$111查看联系信息(Showroom-公司详情)</string>
    <string name="a112">$112发送询盘(Showroom-公司详情)</string>
    <string name="a113">$113Showroom内公司详情页</string>
    <string name="a114">$114查看产品详情(产品搜索结果列表)</string>
    <string name="a115">$115收藏目录(产品搜索结果列表)</string>
    <string name="a116">$116取消收藏目录(产品搜索结果列表)</string>
    <string name="a117">$117筛选产品(产品搜索结果列表)</string>
    <string name="a118">$118产品搜索结果列表页</string>
    <string name="a119">$119查看产品图片(产品详情)</string>
    <string name="a120">$120查看产品描述(产品详情)</string>
    <string name="a121">$121查看基本信息(产品详情)</string>
    <string name="a122">$122查看更多信息(产品详情)</string>
    <string name="a123">$123针对产品发送询盘(产品详情)</string>
    <string name="a124">$124查看showroom(产品详情)</string>
    <string name="a125">$125分享产品(产品详情)</string>
    <string name="a126">$126收藏产品(产品详情)</string>
    <string name="a127">$127取消收藏产品(产品详情)</string>
    <string name="a128">$128产品详情页</string>
    <string name="a129">$129分享产品到Facebook(产品分享)</string>
    <string name="a130">$130分享产品到Twitter(产品分享)</string>
    <string name="a131">$131分享产品到LinkedIn(产品分享)</string>
    <string name="a132">$132查看公司详情(公司搜索结果列表)</string>
    <string name="a133">$133筛选公司(公司搜索结果列表)</string>
    <string name="a134">$134公司搜索结果列表页</string>
    <string name="a135">$135登录账号(发送询盘—未登录)</string>
    <string name="a136">$136保存联系信息(发送询盘—未登录)</string>
    <string name="a137">$137发送询盘填写联系信息页</string>
    <string name="a138">$138发送询盘编辑页</string>
    <string name="a139">$139发送询盘(发送询盘—已登录)</string>
    <string name="a140">$140已登录询盘发送编辑页</string>
    <string name="a141">$126查看询盘详情(发件箱)</string>
    <string name="a142">$142搜索询盘(收件箱)</string>
    <string name="a142_1">$127搜索询盘(发件箱)</string>
    <string name="a143">$143删除询盘(收件箱)</string>
    <string name="a144">$144VO内收件箱询盘列表页</string>
    <string name="a145">$145查看收件人信息(收件箱询盘详情页)</string>
    <string name="a158">$131查看收件人信息(发件箱询盘详情页)</string>
    <string name="a146">$146回复询盘(收件箱询盘详情页)</string>
    <string name="a147">$147删除询盘(收件箱询盘详情页)</string>
    <string name="a148">$148收件箱回复询盘发送(收件箱询盘编辑页)</string>
    <string name="a149">$149VO内收件箱询盘详情页</string>
    <string name="a150">$150查看询盘详情(发件箱)</string>
    <string name="a151">$151搜索询盘(发件箱)</string>
    <string name="a152">$152删除询盘(发件箱)</string>
    <string name="a153">$153VO内发件箱询盘列表页</string>
    <string name="a154">$154删除询盘(发件箱询盘详情页)</string>
    <string name="a155">$155重发询盘(发件箱询盘详情页)</string>
    <string name="a156">$156VO内发件箱询盘详情页</string>
    <string name="a157">$118查看询盘详情(收件箱)</string>
    <string name="a159">$159询盘快捷语(发送询盘—已登录)</string>
    <string name="c1">$1快速搜索（首页）</string>
    <string name="c2">$2查看目录（首页）</string>
    <string name="c3">$3首页广告（首页）</string>
    <string name="c4">$4查看消息（首页）</string>
    <string name="c5">$5快速发布RFQ（首页）</string>
    <string name="c6">$6查看收藏（首页）</string>
    <string name="c7">$7查看专题（首页）</string>
    <string name="c8">$8查看推荐产品（首页）</string>
    <string name="c9">$9查看历史浏览（首页）</string>
    <string name="c10">$10点击历史浏览产品（首页）</string>
    <string name="c11">$11返回首页</string>
    <string name="c12">$12进入搜索（首页）</string>
    <string name="c13">$13查看Easy Sourcing（首页）</string>
    <string name="c14">$14进入My Account (首页）</string>
    <string name="p10001">$10001首页</string>
    <string name="p10002">$10002历史记录页</string>
    <string name="c15">$15切换分类（专题）</string>
    <string name="c16">$16点击浏览专题产品</string>
    <string name="c17">$17快速发布RFQ（专题）</string>
    <string name="p10003">$10003专题</string>
    <string name="c18">$18跳转搜索</string>
    <string name="c19">$19搜索条件选项（搜索）</string>
    <string name="c20">$20取消搜索（搜索）</string>
    <string name="c21">$21使用最近搜索关键词（搜索）</string>
    <string name="c22">$22清空输入关键词（搜索）</string>
    <string name="c23">$23清空最近搜索关键词（搜索）</string>
    <string name="c24">$24删除最近目录（目录）</string>
    <string name="mic_products">Products</string>
    <string name="mic_categories">Categories</string>
    <string name="mic_rfq_hint_productName">Product Name</string>
    <string name="mic_rfq_hint_purchaseQuantity">Quantity</string>
    <string name="mic_rfq_hint_expiredDate">Expired Date</string>
    <string name="mic_rfq_hint_description">Description</string>
    <string name="mic_rfq_hint_shipmentTerms">Shipment Terms</string>
    <string name="mic_rfq_hint_targetPrice">Target Price(per unit)</string>
    <string name="mic_rfq_hint_destinationPort">Destination Port</string>
    <string name="mic_rfq_hint_paymentTerms">Payment Terms</string>
    <string name="mic_cancel">Cancel</string>
    <string name="mic_confirm">Confirm</string>
    <string name="mic_aboutus_name">Made in China(for Buyer) V</string>
    <string name="mic_aboutus_msg">Made-in-China.com was developed by,and is operted by Focus Technology Co.,Ltd.Focus Technology is a pioneer and leader in the field of eletronic business in china. Foundedin 1996,with the mission of enabling clients to drive cost down and increase sales and profitswith effective web-based solutions,Focus Thchnology has help many chinese small-and-medium-sizedenterprised compete in international trade,advance into new markets and meet the needs of their clients.</string>
    <string name="mic_aboutus_copy">Copy Right @ 2012 Focus Technology Co., Ltd.</string>
    <string name="mic_rfq_quantity_unit_item1">Pieces</string>
    <string name="mic_rfq_price_unit_item1">USD</string>
    <string name="subject">Subject</string>
    <string name="recipient">Recipient</string>
    <string name="sender">Sender</string>
    <string name="login_password_hint">Password</string>
    <string name="product_group_encrypt">Please input password offered by Supplier:</string>
    <string name="vo_supplier">Suppliers</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="closed">Closed</string>
    <string name="home_bottom1">Home</string>
    <string name="home_bottom2">Search</string>
    <string name="home_bottom3">Easy Sourcing</string>
    <string name="home_bottom4">My Account</string>
</resources>