<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mic_dialog1_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/product_group_encrypt"
            android:textColor="@color/light_black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/product_group_encryptPassword"
            style="@style/medittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="8dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textColor="@color/light_black"
            android:textColorHint="@color/search_list_item_right"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/mic_dialog1_line1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" >

        <Button
            android:id="@+id/btCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mic_dialog_text1_bg_selector"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:text="@string/mic_cancel"
            android:textColor="@color/mic_home_menu_text"
            android:textSize="14sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@drawable/mic_dialog1_line2" />

        <Button
            android:id="@+id/btCall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mic_dialog_text2_bg_selector"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/mic_confirm"
            android:textColor="@color/mic_home_menu_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>