<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mic_search_popup_bg"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <LinearLayout
        android:id="@+id/mail_search_type_pop_subject_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/mic_common_menu_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/mic_menu_line" />

    <LinearLayout
        android:id="@+id/mail_search_type_pop_recipient_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/mic_common_menu_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/mic_menu_line" />

    <LinearLayout
        android:id="@+id/mail_search_type_pop_sender_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/mic_common_menu_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender" />
    </LinearLayout>

</LinearLayout>