<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical" >

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/page_indicator_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_pending"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pending"
                android:textSize="@dimen/page_indicator_title" />

            <TextView
                android:id="@+id/tv_rejected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rejected"
                android:textSize="@dimen/page_indicator_title" />

            <TextView
                android:id="@+id/tv_closed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/closed"
                android:textSize="@dimen/page_indicator_title" />
        </LinearLayout>

        <com.focustech.common.widget.viewpagerindictor.UnderlinePageIndicator
            android:id="@+id/vo_title_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/page_indicator_line_height"
            android:background="@color/page_indicator_line_background"
            android:orientation="horizontal" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_sourcing_request"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>